# rpi-pico-testing

./: BILL_OF_MATERIALS.md  CMakeLists.txt  Lift Test.md  button-blinky.c  flash.sh  lift.c  light.c  volume.c
networking/: CMakeLists.txt  lwipopts.h  my_fsdata.c  networking.c
